--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 res = 7.69 * total;
             }
             
-            document.getElementById("result").value ="Total Unit: "+total +" Amount: ₹" + res;
+            document.getElementById("result").value ="Amount: ₹" + res;
             document.getElementById("total_unit").innerHTML ="Total Unit: " + total;
             document.getElementById("rate").innerHTML ="Rate Per Unit: " + (res/total) + "/-";
         }
