--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class=cal_bg>
             <h3>Electricity Bill Calculator<h3>
             <form>
-                <input id="previous_unit" type="number" placeholder="Enter Previous Bill Unit" >
-                <input id="recent_unit" type="number"  placeholder="Enter Recent Bill Unit"> 
+                <input type="number" id="previous_unit" placeholder="Enter Previous Bill Unit" >
+                <input type="number" id="recent_unit" placeholder="Enter Recent Bill Unit"> 
                 <button class="button" type="button" onclick="calculate()"><span>Calculate  </span></button>
                 <input class=result id="result" readonly>
                 <label id="total_unit"></label>
